# bex

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  apl.rs  base.rs  bdd.rs  bex.code-workspace  bex.leo  build.rs  io.rs  lib.rs  mod.rs  plans.org  run-api.sh  viewbex.html  x32.rs
.claude/: settings.local.json
api/: .env  Cargo.toml  README.md
api/src/: main.rs
benches/: bench-solve.rs
bex/: bdd.rs
doc/: bdd-types.vue  bex-trail.org  bex-types.vue  coz-profiling.md  dependencies.vue  factorbench.org  ft-nid-notes.org  howto.org  ideas.org  notation.org  optimization-ideas.md  outline.org  papers.org  plans.org  recipe.org  scaffold.ipynb  scaffold_graph_tests.py  spec.org  swap-notes.md  swap-rc.vue  time-to-cover.md  var-orders.org  wipbase.org  workers.org  workstate.vue
doc/scrap/: interchange.org  primes.org  solve64-log.txt  three.org  why-anf.org
examples/: README.md  bdd-solve.rs  bex-shell.rs
examples/shell/: bex-shell.rs  swarm-shell.rs
examples/solve/: README-compare-ordering.md  RESULTS-node-sharing.md  RESULTS-ordering-comparison.md  RESULTS-variable-sizes.md  bdd-solve.rs  bench-small.rs  compare-ordering.rs  factor-p-tiny.rs  factor-p.rs  factor-p4-bytes.rs  generate-truthtables.rs
ffi/: CMakeLists.txt  Cargo.toml  cbindgen.toml
ffi/src/: lib.rs
py/: Cargo.toml  README.md  dd-test.sh  dd_bex.py  dd_bex_tests.py  go.sh  pyproject.toml  test.py
py/bex/: __init__.py  dd.py
py/src/: lib.rs  py.rs
src/: anf.rs  anf_swarm.rs  apl.rs  ast.rs  base.rs  bdd.rs  comb.rs  coz_profile.rs  cur.rs  fun.rs  int.rs  io.rs  lib.rs  naf.rs  nid-fun.rs  nid.rs  oldswap.rs  ops.rs  reg.rs  simp.rs  solve.rs  sql.rs  sql_snap.rs  swap.rs  swarm.rs  tbl.rs  test-bdd.rs  test-swap-replan.rs  test-swap-scaffold.rs  test-swap.rs  tmp.rs  vhl.rs  vhl_swarm.rs  vid.rs  wip.rs  x32.rs  zdd.rs
src/bdd/: bdd-json.rs  bdd_sols.rs  bdd_swarm.rs  iter.rs
test-data/: adjacent-pairs-4vars.tt  majority-3vars.tt  mux-4vars.tt  non-adjacent-4vars.tt  parity-4vars.tt
test-data-16vars/: ast-n10-s42-15vars.tt  ast-n10-s42-16vars.tt  ast-n20-s123-16vars.tt  ast-n50-s999-16vars.tt  mod16-pow2-13vars.tt  mod16-pow2-16vars.tt  mod256-low-13vars.tt  mod256-low-16vars.tt  mod3-eq0-11vars.tt  mod3-eq0-16vars.tt  mod3-ne0-11vars.tt  mod3-ne0-16vars.tt  mod7-eq0-12vars.tt  mod7-eq0-16vars.tt  mod7-prime-12vars.tt  mod7-prime-16vars.tt  num-factors-1-16vars.tt  num-factors-2-16vars.tt  num-factors-3-16vars.tt  num-factors-4-16vars.tt  prime-10vars.tt  prime-16vars.tt  primorial-div-p3-16vars.tt  primorial-div-p4-16vars.tt  primorial-div-p5-16vars.tt  primorial-div-p6-16vars.tt  sha-bex-14vars.tt  sha-bex-16vars.tt  sha-ordering-14vars.tt  sha-ordering-16vars.tt  sha-test-15vars.tt  sha-test-16vars.tt
