[package]
name = "bex"
version = "0.2.0"
edition = "2021"
authors = ["tangentstorm <michal.wallace@gmail.com>"]
description = "A rust library for working with boolean expressions (syntax trees, decision diagrams, algebraic normal form, etc.)"
documentation = "https://docs.rs/bex/"
repository = "https://github.com/tangentstorm/bex"
keywords = ["bdd", "diagram", "anf"]
categories = ["algorithms", "data-structures"]
license = "MIT"
readme = "README.md"

[lib]
name = "bex"
path = "src/lib.rs"

[[bin]]
name = "bex-shell"
path = "examples/shell/bex-shell.rs"

[[bin]]
name = "bdd-solve"
path = "examples/solve/bdd-solve.rs"

[[bin]]
name = "factor-p"
path = "examples/solve/factor-p.rs"

[features]
slowtests = []

[workspace]
members = ["py"]

[dependencies]
log = { version = "0.4", features = ["max_level_debug"]}
simplelog = "0.5"
num_cpus = "1.0"
rand = "0.8.5"
dashmap = { version="5.4.0"}
boxcar = "0.1.0"
fxhash = "0.2.1"
concurrent-queue = "2.1.0"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "bench-solve"
harness = false
