[package]
name = "bex"
version = "0.3.0"
edition = "2021"
authors = ["tangentstorm <michal.wallace@gmail.com>"]
description = "A rust library for working with boolean expressions (syntax trees, decision diagrams, algebraic normal form, etc.)"
documentation = "https://docs.rs/bex/"
repository = "https://github.com/tangentstorm/bex"
keywords = ["bdd", "diagram", "anf"]
categories = ["algorithms", "data-structures"]
license = "MIT"
readme = "README.md"
default-run = "bex-shell"

[lib]
name = "bex"
path = "src/lib.rs"

[[bin]]
name = "bex-shell"
path = "examples/shell/bex-shell.rs"

[[bin]]
name = "swarm-shell"
path = "examples/shell/swarm-shell.rs"

[[example]]
name = "bdd-solve"
path = "examples/solve/bdd-solve.rs"

[[example]]
name = "factor-p"
path = "examples/solve/factor-p.rs"

[[example]]
name = "factor-p-tiny"
path = "examples/solve/factor-p-tiny.rs"

[[example]]
name = "bench-small"
path = "examples/solve/bench-small.rs"

[features]
default = ["sql"]
sql = []
slowtests = []
# Enable causal profiling via the `coz` crate. See src/coz_profile.rs
# and doc/coz-profiling.md for usage. Linux-only; 2-5x slowdown while
# profiling. Off by default.
coz = ["dep:coz"]

[workspace]
members = ["py", "api", "ffi"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = "line-tables-only"

[dependencies]
log = { version = "0.4", features = ["max_level_debug"]}
simplelog = "0.5"
num_cpus = "1.0"
dashmap = { version="5.4.0"}
boxcar = "0.1.0"
fxhash = "0.2.1"
concurrent-queue = "2.1.0"
crossbeam-channel = "0.5"
json = "0.12.4"
rusqlite = { version = "0.31", features = ["bundled"] }
coz = { version = "0.1", optional = true }

[dev-dependencies]
divan = "0.1.21"

[[bench]]
name = "bench-solve"
harness = false
