[package]
name = "pybex"
version = "0.2.0"
authors = ["tangentstorm <michal.wallace@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bex"
crate-type = ["cdylib"]

[dependencies]
bex = { path = ".." }
fxhash = "0.2.1"

[dependencies.pyo3]
version = "0.23.4"
features = ["extension-module"]
