[package]
name = "bex_py"
version = "0.3.0"
authors = ["tangentstorm <michal.wallace@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Python bindings for bex, a rust crate for working with boolean functions as graphs (BDDs, etc)."
repository = "https://github.com/tangentstorm/bex/tree/main/py"

[lib]
name = "bex"
crate-type = ["cdylib"]

[dependencies]
bex = { path = ".." }
fxhash = "0.2.1"

[dependencies.pyo3]
version = "0.23.4"
features = ["extension-module"]
